Fixed item price color

--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ Main Components
   float: right;
 }
 .cd-item-info .cd-price {
-  color: #147b21;
+  color: #325000;
   position: relative;
   margin-left: 10px;
   -webkit-transition: color 0.2s;
